[package]
name = "rust-fp-categories"
version = "0.0.5"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Functional Programming Library in Rust, Category"
repository="https://github.com/j5ik2o/rust-fp"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

