[package]
name = "rust-fp-pfds"
version = "0.0.4"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Functional Programming Library in Rust, Purely Functional Data Structure"
repository="https://github.com/j5ik2o/rust-fp"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2018"

[dependencies]
rust-fp-categories = { version = "0.0.5", path = "../categories" }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"