[package]
name = "rust-fp-pfds"
version = "0.0.4"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
description = "A Functional Programming Library in Rust, Purely Functional Data Structure"
keywords = ["monad", "functor"]
repository="https://github.com/j5ik2o/rust-fp"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"

[badges]
github = { repository = "j5ik2o/rust-fp", workflow = "Rust" }

[dependencies]
rust-fp-categories = { version = "0.0.5", path = "../categories" }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
criterion = "0.3"

[[bench]]
name = "list_benchmark"
harness = false

[[bench]]
name = "deque_benchmark"
harness = false

[[bench]]
name = "finger_tree_benchmark"
harness = false
